GNOME Bugzilla – Bug 730833
RTL in the inspector does not change the icons
Last modified: 2014-05-31 03:21:58 UTC
I was playing with the patches in bug 730822 and bug 730825 and I noticed that changing the text direction to RTL does not have the same effect has running with LANG=he_IL.UTF-8. To reproduce: - start the app, turn on the inspector and switch to RTL - click on something to preview it, say a PDF - while the previous / next buttons have changed position, the icons inside them have not
It is probably a case of the icons not being updated when the text direction changes.
Created attachment 277335 [details] [review] Update GtkImage icons when the direction is changed
I also see that text inside combo boxes in the inspector UI change their alignment when the direction is changed.
Created attachment 277337 [details] Simple test program
Attachment 277335 [details] pushed as 047d2b5 - Update GtkImage icons when the direction is changed